# FeatherCore

./: .gitignore  Cargo.toml  README.md  build_tool.rs
.cargo/: config.toml
arch/arm/: Cargo.toml
arch/arm/src/: lib.rs
arch/riscv/: Cargo.toml
arch/riscv/src/: lib.rs
boot/: Cargo.toml
boot/src/: main.rs  startup_cortex_m.rs  startup_riscv.rs
build_tool/: Cargo.toml
build_tool/scripts/: build_linux.sh  build_windows.bat
build_tool/src/: build.rs  config.rs  device_tree.rs  linker.rs  main.rs  root_path.rs  utils.rs
build_tool/templates/: devicetree.rs.template
common/: Cargo.toml
common/arch/arm/: Cargo.toml  link.x.in
common/arch/arm/macros/: Cargo.toml
common/arch/arm/macros/src/: lib.rs
common/arch/arm/src/: lib.rs
common/arch/riscv/: link.x.in
common/arch/riscv/src/: lib.rs
common/driver/: Cargo.toml  i2s.rs  mod.rs  spi.rs  timer.rs
common/driver/i2s/: config.rs  error.rs  traits.rs
common/driver/spi/: config.rs  error.rs  traits.rs
common/driver/src/: gpio.rs  i2c.rs  i2s.rs  lib.rs  serial.rs  spi.rs  timer.rs
common/driver/timer/: config.rs  error.rs  traits.rs
common/fs/: mod.rs
common/platform/: Cargo.toml
common/platform/driver/: mod.rs
common/platform/driver/gpio/: mod.rs  stm32f4.rs
common/platform/driver/i2c/: mod.rs
common/platform/driver/i2s/: mod.rs
common/platform/driver/serial/: mod.rs
common/platform/driver/spi/: mod.rs
common/platform/driver/timer/: mod.rs
common/platform/sys/clock/: esp32.rs
common/platform/sys/cpu/: mod.rs  stm32f4.rs
common/platform/sys/interrupt/: esp32.rs  mod.rs  stm32f4.rs
common/platform/sys/memory/: esp32.rs  mod.rs  stm32f4.rs
common/src/: async_rt.rs  devicetree.rs  error.rs  fs.rs  lib.rs  mm.rs  sync.rs  util.rs
common/src/driver/: led.rs  mod.rs
common/src/fs/: mod.rs
common/src/platform/sys/: mod.rs
common/src/platform/sys/clock/: mod.rs  rp2040.rs  stm32f4.rs
common/src/platform/sys/cpu/: esp32.rs  rp2040.rs
common/sys/: lib.rs
common/sys/clock/: config.rs  error.rs  lib.rs  traits.rs
common/sys/cpu/: config.rs  error.rs  lib.rs  traits.rs
common/sys/interrupt/: config.rs  error.rs  lib.rs  traits.rs
common/sys/memory/: config.rs  error.rs  lib.rs  traits.rs
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_TOOL_USAGE.md  FINAL_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
kernel/: Cargo.toml
kernel/src/: future.rs  irq.rs  lib.rs  log.rs  main.rs  mm.rs  sched.rs  sync.rs  task.rs  time.rs
platform/board/esp/esp32-c3-devkitc/: esp32-c3-devkitc.dts  esp32-c3-devkitc_defconfig.toml
platform/board/esp/esp32-c5-devkitc/: esp32-c5-devkitc_defconfig.toml
platform/board/esp/esp32-c6-devkitm/: esp32-c6-devkitm_defconfig.toml
platform/board/nxp/frdm-rw612/: frdm-rw612_defconfig.toml
platform/board/nxp/mimxrt1170-evkb/: mimxrt1170-evkb_defconfig.toml
platform/board/renesas/ek-ra8p1/: ek-ra8p1_defconfig.toml
platform/board/renesas/ek-ra8p1/config/: devicetree.dts
platform/board/stm32/stm32f429i-disc/: stm32f429i-disc_defconfig.toml
platform/board/stm32/stm32h7s78-dk/: stm32h7s78-dk.dts  stm32h7s78-dk_defconfig.toml
platform/board/stm32/stm32n6570-dk/: stm32n6570-dk_defconfig.toml
platform/board/stm32/stm32u5a9j-dk/: stm32u5a9j-dk_defconfig.toml
platform/board/stm32/stm32u5g9j-dk1/: stm32u5g9j-dk1.dts  stm32u5g9j-dk1_defconfig.toml
platform/chip/esp/esp32c3/: esp32c3.dts  esp32c3_defconfig.toml
platform/chip/esp/esp32c5/: esp32c5.dts  esp32c5_defconfig.toml
platform/chip/esp/esp32c6/: esp32c6.dts  esp32c6_defconfig.toml
platform/chip/nxp/imxrt1170/: imxrt1170.dts  imxrt1170_defconfig.toml
platform/chip/nxp/rw612/: rw612.dts  rw612_defconfig.toml
platform/chip/renesas/ra8/: ra8.dts  ra8_defconfig.toml
platform/chip/stm32/stm32f4/: stm32f4.dts  stm32f4_defconfig.toml
platform/chip/stm32/stm32h7rs/: stm32h7rs.dts  stm32h7rs_defconfig.toml
platform/chip/stm32/stm32n6/: stm32n6.dts  stm32n6_defconfig.toml
