[package]
name = "feathercore-boot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "FeatherCore Bootloader"
publish = false

[[bin]]
name = "feathercore-boot"
path = "src/main.rs"
test = false
bench = false

[dependencies]
feathercore-common = { path = "../common", features = ["async", "mm", "sync"] }

[features]
default = []

# ARM architecture
arm = []

# Cortex-M architectures
armv6-m = ["arm", "feathercore-common/armv6-m"]
armv7-m = ["arm", "feathercore-common/armv7-m"]
armv7-em = ["arm", "feathercore-common/armv7-em"]
armv8-m-base = ["arm", "feathercore-common/armv8-m-base"]
armv8-m-main = ["arm", "feathercore-common/armv8-m-main"]

# Cortex-A architectures
armv7-a = ["arm", "feathercore-common/armv7-a"]
armv8-a = ["arm", "feathercore-common/armv8-a"]
armv9-a = ["arm", "feathercore-common/armv9-a"]

# RISC-V architecture
riscv = ["feathercore-common/riscv"]

# Board-specific features
stm32f429i-disc = ["armv7-em"]
stm32n6570-dk = ["armv8-m-main"]
mimxrt1170-evkb = ["armv7-m"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[target.thumbv7em-none-eabihf]
rustflags = [
    "-C", "link-arg=-Tlink.x"
]

[target.thumbv8m.main-none-eabihf]
rustflags = [
    "-C", "link-arg=-Tlink.x"
]

[target.thumbv7m-none-eabi]
rustflags = [
    "-C", "link-arg=-Tlink.x"
]

[target.thumbv8m.base-none-eabi]
rustflags = [
    "-C", "link-arg=-Tlink.x"
]

[target.riscv32imac-unknown-none-elf]
rustflags = [
    "-C", "link-arg=-Tlink.x"
]

[target.riscv64imac-unknown-none-elf]
rustflags = [
    "-C", "link-arg=-Tlink.x"
]
