[package]
name = "feathercore-boot"
version = "0.1.0"
edition = "2021"
authors = ["FeatherCore Contributors"]
license = "MIT OR Apache-2.0"
description = "FeatherCore Bootloader"
publish = false

[[bin]]
name = "feathercore-boot"
path = "src/main.rs"
test = false
bench = false

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-nostartfiles", "-C", "link-arg=-nodefaultlibs"]

[dependencies]
feathercore-common = { path = "../common", features = ["driver", "devicetree"] }

[features]
default = []

# ARM architecture
arm = []

# Cortex-M architectures
armv6-m = ["arm", "feathercore-common/armv6-m"]
armv7-m = ["arm", "feathercore-common/armv7-m"]
armv7-em = ["arm", "feathercore-common/armv7-em"]
armv8-m-base = ["arm", "feathercore-common/armv8-m-base"]
armv8-m-main = ["arm", "feathercore-common/armv8-m-main"]

# Cortex-A architectures
armv7-a = ["arm", "feathercore-common/armv7-a"]
armv8-a = ["arm", "feathercore-common/armv8-a"]
armv9-a = ["arm", "feathercore-common/armv9-a"]

# RISC-V architecture
riscv = ["feathercore-common/riscv"]

# Board-specific features (STM32)
stm32f429i-disc = ["armv7-em"]
stm32h7s78-dk = ["armv7-em"]
stm32n6570-dk = ["armv8-m-main"]
stm32u5a9j-dk = ["armv8-m-main"]
stm32u5g9j-dk1 = ["armv8-m-main"]

# Board-specific features (ESP32)
esp32-c3-devkitc = ["riscv"]
esp32-c5-devkitc = ["riscv"]
esp32-c6-devkitm = ["riscv"]

# Board-specific features (NXP)
mimxrt1170-evkb = ["armv7-m"]
frdm-rw612 = ["armv8-m-main"]

# Board-specific features (Renesas)
ek-ra8p1 = ["armv8-m-main"]

# Device tree support
devicetree = ["feathercore-common/devicetree"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
