[package]
name = "feathercore-common"
version = "0.1.0"
edition = "2021"
authors = ["FeatherCore Contributors"]
license = "MIT OR Apache-2.0"

[lib]
name = "feathercore_common"
path = "src/lib.rs"

[dependencies]
# Architecture dependencies (optional)
feathercore-arch-arm = { path = "./arch/arm", optional = true }
feathercore-arch-riscv = { path = "./arch/riscv", optional = true }

# Driver sub-library (optional)
feathercore-driver = { path = "./driver", optional = true }

[features]
default = []

# Architecture features
arm = ["feathercore-arch-arm"]
riscv = ["feathercore-arch-riscv"]

# ARM architecture variants
armv6-m = ["arm", "feathercore-arch-arm/armv6-m"]
armv7-m = ["arm", "feathercore-arch-arm/armv7-m"]
armv7-em = ["arm", "feathercore-arch-arm/armv7-em"]
armv8-m-base = ["arm", "feathercore-arch-arm/armv8-m-base"]
armv8-m-main = ["arm", "feathercore-arch-arm/armv8-m-main"]
armv7-a = ["arm", "feathercore-arch-arm/armv7-a"]
armv8-a = ["arm", "feathercore-arch-arm/armv8-a"]
armv9-a = ["arm", "feathercore-arch-arm/armv9-a"]

# Optional features
async = []      # Enable async runtime
mm = []         # Enable memory management
sync = []       # Enable synchronization primitives
driver = ["feathercore-driver"]  # Enable driver framework
fs = []         # Enable filesystem framework
devicetree = [] # Enable device tree support

# Driver sub-library features (passed through)
driver_gpio = ["feathercore-driver/driver_gpio"]
driver_i2c = ["feathercore-driver/driver_i2c"]
driver_spi = ["feathercore-driver/driver_spi"]
driver_serial = ["feathercore-driver/driver_serial"]
driver_i2s = ["feathercore-driver/driver_i2s"]
driver_timer = ["feathercore-driver/driver_timer"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
