[package]
name = "feathercore-kernel"
description = "FeatherCore RTOS Kernel"
version = "0.1.0"
authors = ["FeatherCore Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "feathercore-kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
feathercore-common = { path = "../common", features = ["driver", "devicetree"] }
feathercore-arch-arm = { path = "../common/arch/arm", optional = true }
feathercore-arch-riscv = { path = "../common/arch/riscv", optional = true }

[features]
default = []

# Cortex-M architectures
armv6-m = ["feathercore-arch-arm/armv6-m"]
armv7-m = ["feathercore-arch-arm/armv7-m"]
armv7-em = ["feathercore-arch-arm/armv7-em"]
armv8-m-base = ["feathercore-arch-arm/armv8-m-base"]
armv8-m-main = ["feathercore-arch-arm/armv8-m-main"]

# Cortex-A architectures
armv7-a = ["feathercore-arch-arm/armv7-a"]
armv8-a = ["feathercore-arch-arm/armv8-a"]
armv9-a = ["feathercore-arch-arm/armv9-a"]

# RISC-V architecture
riscv = ["feathercore-arch-riscv/riscv"]

# Board-specific features
stm32f429i-disc = ["armv7-em"]
stm32n6570-dk = ["armv8-m-main"]
mimxrt1170-evkb = ["armv7-m"]

# Device tree support
devicetree = ["feathercore-common/devicetree"]
