[package]
name = "feathercore-arch-arm"
description = "FeatherCore ARM Architecture Support"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

[features]
# Cortex-M architectures
armv6-m = []    # Cortex-M0, Cortex-M0+
armv7-m = []    # Cortex-M3
armv7-em = []   # Cortex-M4, Cortex-M7
armv8-m-base = []  # Cortex-M23
armv8-m-main = []  # Cortex-M33, Cortex-M55, Cortex-M85

# Cortex-A architectures
armv7-a = []    # Cortex-A5, Cortex-A7, Cortex-A8, Cortex-A9, Cortex-A15
armv8-a = []    # Cortex-A53, Cortex-A55, Cortex-A72, Cortex-A73, Cortex-A75, Cortex-A76, Cortex-A77, Cortex-A78
armv9-a = []    # Cortex-A710, Cortex-A715, Cortex-A720, Cortex-A520